adding other description methods
